swagger and server change
